[tool.poetry]
name = "skippex"
version = "0.1.1"
description = "Automatic 'skip intro' for Plex with Chromecast support"
authors = ["sprt <hellosprt@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/sprt/skippex"
keywords = ["plex", "chromecast"]

[tool.poetry.scripts]
skippex = 'skippex.cmd:main'

[tool.poetry.dependencies]
python = "^3.6"
PlexAPI = "^4.2.0"
requests = "^2.25.1"
websocket_client = "^0.57.0"
PyChromecast = "^7.7.1"
wrapt = "^1.12.1"
zeroconf = "^0.28.8"
dataclasses = { version = "^0.7", python = "<3.7" }
typing-extensions = "^3.7.4"
xdg = "^5.0.1"
pid = "^3.0.4"

[tool.poetry.dev-dependencies]
ipython = "<7.17"  # Python 3.6 support was removed in v7.17.
pytest = "^6.2.1"
tox = "^3.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
